Completed homework for week 1.

--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,11 +1,46 @@
 /* Give your page a fun background color */
+body {
+    background-color: #190933;
+    color: #ACFCD9;
+    font-family: sans-serif;
+    margin: 0;
+}
 
 /* Make the header and footer a different color from the background */
+header, footer {
+    background-color: #665687;
+    margin: 0;
+    padding: 0.5rem 0;
+}
+
+.content {
+    padding: 2rem;
+    margin: auto;
+    width: 50vw;
+}
 
 /* Align the h1 containing your name in the center of the header*/
+h1 {
+    text-align: center;
+    color: whitesmoke;
+}
 
 /* Make your p tag a different color and italic */
+p {
+    text-align: center;
+    font-style: italic;
+}
 
 /* Put a border around your image */
+img {
+    border-style: solid;
+    border-color: #ACFCD9;
+    border-radius: 15px;
+    width: 50vw;
+    
+}
 
 /* Change the font-family of your list */
+ul {
+    font-family: monospace;
+}
